--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,63 @@
-.App {
-  text-align: center;
+.header-color {
+	background: #355C7D;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.landing-grid {
+  	background: #355C7D;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	text-align: center;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.avatar-img {
+    height: 250px;
+	padding-top: 5em;
+	border-radius: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+.banner-text {
+	background-color: black;
+	opacity: .8;
+	width: 75%;
+	margin: auto;
+	border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.banner-text h1 {
+	font-size: 66px;
+	font-weight: bold;
+	color: white;
+}
+
+.banner-text hr {
+	border-top: 4px solid white;
+	width: 50%;
+	margin: auto;
+}
+
+.banner-text p {
+	color: white;
+	font-size: 20px;
+	padding: 1em;
+}
+
+.social-links {
+	display: flex;
+	justify-content: space-between;
+	width: 50%;
+	margin: auto;
+}
+
+.social-links i{
+	color: white;
+	font-size: 5em;
+	padding: 8px;
 }
